bug:fix extra space occured due to parentGoBack

--- a/styles/departmentResponsive.css
+++ b/styles/departmentResponsive.css
@@ -72,6 +72,10 @@
         display: flex;
     }
 
+    .parentGoback {
+        display: flex;
+    }
+
     nav .search {
         display: block;
     }
