--- a/styles/headerStyle.css
+++ b/styles/headerStyle.css
@@ -122,6 +122,7 @@ nav a {
     justify-content: center;
     align-items: center;
     margin: 0 1rem;
+    display: none;
 }
 
 .goback {
